--- a/1.-Python/1.-Snail-and-Well/snail-and-well.ipynb
+++ b/1.-Python/1.-Snail-and-Well/snail-and-well.ipynb
@@ -30,10 +30,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "well_height= 125\n",
+    "daily_distance=30\n",
+    "nightly_distance=20\n",
+    "snail_position=0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -44,10 +49,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "days=0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,10 +65,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "while snail_position<125:\n",
+    "    snail_position+=daily_distance-nightly_distance\n",
+    "    days+=1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -72,10 +83,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(days)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,10 +117,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "well_height=125\n",
+    "daily_distance=30\n",
+    "nightly_distance=20\n",
+    "snail_position=0\n",
+    "advance_cm = [30, 21, 33, 77, 44, 45, 23, 45, 12, 34, 55]\n",
+    "days=0\n",
+    "for x in advance_cm:\n",
+    "    if snail_position<125:\n",
+    "        snail_position+=x-nightly_distance\n",
+    "        days+=1\n",
+    "print(days)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -111,10 +152,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum displacement:57\n",
+      "Minimum displacement:1\n"
+     ]
+    }
+   ],
+   "source": [
+    "well_height=125\n",
+    "daily_distance=30\n",
+    "nightly_distance=20\n",
+    "snail_position=0\n",
+    "advance_cm = [30, 21, 33, 77, 44, 45, 23, 45, 12, 34, 55]\n",
+    "advancemaxmin =[]\n",
+    "days=0\n",
+    "for x in advance_cm:\n",
+    "    if snail_position<125:\n",
+    "        snail_position+=x-nightly_distance\n",
+    "        advancemaxmin.append(x-nightly_distance)\n",
+    "maximo=max(advancemaxmin)\n",
+    "minimo=min(advancemaxmin)\n",
+    "print(f'Maximum displacement:{maximo}')\n",
+    "print(f'Minimum displacement:{minimo}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -125,16 +191,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21.666666666666668\n"
+     ]
+    }
+   ],
+   "source": [
+    "#suponiendo que el ultimo dia llega a 125 y recorre 5 en plano.\n",
+    "average=sum(advancemaxmin)/len(advancemaxmin)\n",
+    "print(average)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 4. What is the standard deviation of its displacement? Take into account the snail slides at night."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17.81073334319006\n"
+     ]
+    }
+   ],
+   "source": [
+    "#suponiendo que el ultimo dia llega a 125 y recorre 5 en plano.\n",
+    "import math\n",
+    "cuadrado=0\n",
+    "for r in advancemaxmin:\n",
+    "    cuadrado+=(r-average)**2\n",
+    "div=cuadrado/len(advancemaxmin)\n",
+    "standard_deviation=math.sqrt(div)\n",
+    "print(standard_deviation)\n"
    ]
   },
   {
@@ -161,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
