--- a/1.-Python/5.-Temperature-Processor/temperature.ipynb
+++ b/1.-Python/5.-Temperature-Processor/temperature.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,10 +53,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "mimtemp=min(temperatures_C)\n",
+    "print(mimtemp)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,10 +78,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "90\n"
+     ]
+    }
+   ],
+   "source": [
+    "maxtemp=max(temperatures_C)\n",
+    "print(maxtemp)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,10 +103,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[70, 76, 80, 81, 80, 83, 90, 79]\n"
+     ]
+    }
+   ],
+   "source": [
+    "up70=[x for x in temperatures_C if x>=70]\n",
+    "print(up70)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -95,10 +128,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60.25\n"
+     ]
+    }
+   ],
+   "source": [
+    "average=sum(temperatures_C)/len(temperatures_C)\n",
+    "print(average)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -109,10 +153,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[33, 66, 65, 62, 59, 60, 62, 64, 70, 76, 80, 81, 80, 83, 90, 79, 61, 53, 50, 49, 53, 48, 45, 39]\n"
+     ]
+    }
+   ],
+   "source": [
+    "hours=[x for x in range(0,len(temperatures_C))]\n",
+    "estimation=[]\n",
+    "for pos,item in enumerate(hours):\n",
+    "    if item==1 or item==2 or item==4 or item==5:\n",
+    "        estimation.append(temperatures_C[pos])\n",
+    "est=int((estimation[0]*0.25+estimation[1]+estimation[2]+estimation[3]*0.25)/2.5)\n",
+    "temperatures_C2=[est if x==0 else x for x in temperatures_C]\n",
+    "print(temperatures_C2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -128,10 +189,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[91.4, 150.8, 149.0, 143.6, 138.2, 140.0, 143.6, 147.2, 158.0, 168.8, 176.0, 177.8, 176.0, 181.4, 194.0, 174.2, 141.8, 127.4, 122.0, 120.2, 127.4, 118.4, 113.0, 102.2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "tempfahre=[x*9/5+32 if x==x else x for x in temperatures_C2]\n",
+    "print(tempfahre)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -150,10 +222,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El sistema de refrigeración tiene que ser reemplazado\n"
+     ]
+    }
+   ],
+   "source": [
+    "if len(up70)>4 or maxtemp>80 or average>65:\n",
+    "    print('El sistema de refrigeración tiene que ser reemplazado')\n",
+    "else:\n",
+    "    print('El sistema de refrigeración no tiene que ser reemplazado')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -175,10 +260,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[76, 80, 81, 80, 83, 90, 79]\n"
+     ]
+    }
+   ],
+   "source": [
+    "up71=[x for x in temperatures_C if x>70]\n",
+    "print(up71)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -189,10 +285,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Existen más de 4 horas consecutivas por encima de 70ªC\n"
+     ]
+    }
+   ],
+   "source": [
+    "posit=[]\n",
+    "for posi,ite in enumerate(temperatures_C):\n",
+    "    for u in up71:\n",
+    "        if ite==u:\n",
+    "            posit.append(posi)\n",
+    "position=list(set(posit))\n",
+    "po2=[]\n",
+    "po3=[]\n",
+    "for t in position:\n",
+    "    po2.append(t)\n",
+    "    if t-po2[len(po2)-2]==1:\n",
+    "        po3.append(1)\n",
+    "    elif len(po3)>3:\n",
+    "        po3.append(1)\n",
+    "    else:\n",
+    "        del po3[0:len(po3)]\n",
+    "if position[len(position)-1]-position[len(position)-2]==1:\n",
+    "    po3.append(1)\n",
+    "if len(po3)>4:\n",
+    "    print('Existen más de 4 horas consecutivas por encima de 70ªC')\n",
+    "else:\n",
+    "    print('No existen más de 4 horas consecutivas por encima de 70ªC') \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -204,10 +331,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El sistema de refrigeración tiene que ser reemplazado\n"
+     ]
+    }
+   ],
+   "source": [
+    "if len(po3)>4 or maxtemp>80 or average>65:\n",
+    "    print('El sistema de refrigeración tiene que ser reemplazado')\n",
+    "else:\n",
+    "    print('El sistema de refrigeración no tiene que ser reemplazado')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -218,16 +358,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "62.833333333333336\n",
+      "145.1\n",
+      "La relación es la formula 𝐹=1.8∗𝐶+32\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def average(l):\n",
+    "    return sum(l)/len(l)\n",
+    "print(average(temperatures_C2)) \n",
+    "print(average(tempfahre))\n",
+    "print('La relación es la formula 𝐹=1.8∗𝐶+32')\n",
+    "print(average(temperatures_C2)*9/5+32==average(tempfahre))"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 5. Find the standard deviation of the temperature lists (ºC and ºF). What is the relation between both standard deviations?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.864958794694368\n",
+      "8.756925830449859\n",
+      "La relación es la formula stedev𝐹=1.8∗stedev𝐶\n",
+      "1.7999999999999994\n"
+     ]
+    }
+   ],
+   "source": [
+    "def stdev(j):\n",
+    "    import math \n",
+    "    for n in j:\n",
+    "        num=(n-average(j))**2\n",
+    "    div=len(j)\n",
+    "    return math.sqrt(num/div)\n",
+    "print(stdev(temperatures_C2))\n",
+    "print(stdev(tempfahre))\n",
+    "print('La relación es la formula stedev𝐹=1.8∗stedev𝐶')\n",
+    "print(stdev(tempfahre)/stdev(temperatures_C2))"
    ]
   },
   {
@@ -254,7 +441,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
