--- a/1.-Python/2.-Duel-of-Sorcerers/duel-of-sorcerers.ipynb
+++ b/1.-Python/2.-Duel-of-Sorcerers/duel-of-sorcerers.ipynb
@@ -49,10 +49,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gandalf = [10, 11, 13, 30, 22, 11, 10, 33, 22, 22]\n",
+    "saruman = [23, 66, 12, 43, 12, 10, 44, 23, 12, 17]\n",
+    "spells= [x-y for (x,y) in zip(gandalf,saruman)]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -64,10 +68,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gandalf_wins=0\n",
+    "saruman_wins=0\n",
+    "tie=0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -78,10 +86,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for g in spells:\n",
+    "    if g>0:\n",
+    "        gandalf_wins+=1\n",
+    "    elif g<0:\n",
+    "        saruman_wins+=1\n",
+    "    else:\n",
+    "        tie+=1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -93,10 +109,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gandalf wins\n"
+     ]
+    }
+   ],
+   "source": [
+    "if gandalf_wins>saruman_wins:\n",
+    "    print('Gandalf wins')\n",
+    "elif gandalf_wins<saruman_wins:\n",
+    "    print('Saruman wins')\n",
+    "else:\n",
+    "    print('Tie')\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -128,10 +159,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "POWER = {'Fireball': 50,'Lightning bolt': 40, 'Magic arrow': 10,'Black Tentacles': 25,'Contagion': 45}\n",
+    "gandalf = ['Fireball', 'Lightning bolt', 'Lightning bolt', 'Magic arrow', 'Fireball', 'Magic arrow', 'Lightning bolt', 'Fireball', 'Fireball', 'Fireball']\n",
+    "saruman = ['Contagion', 'Contagion', 'Black Tentacles', 'Fireball', 'Black Tentacles','Lightning bolt', 'Magic arrow', 'Contagion', 'Magic arrow', 'Magic arrow']\n",
+    "spells=[]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -142,10 +178,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gandalf_wins=0\n",
+    "saruman_wins=0\n",
+    "tie=0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -156,10 +196,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gandalf_power=[]\n",
+    "saruman_power=[]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -171,10 +214,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gandalf wins\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in gandalf:\n",
+    "    for j in POWER:\n",
+    "        if x==j:\n",
+    "            gandalf_power.append(POWER[x])\n",
+    "for x2 in saruman:\n",
+    "    for j2 in POWER:\n",
+    "        if x2==j2:\n",
+    "            saruman_power.append(POWER[x2])\n",
+    "spells=[u-v for (u,v)in zip(gandalf_power,saruman_power)]\n",
+    "\n",
+    "for g in spells:\n",
+    "    if g>0 and saruman_wins<3:\n",
+    "        gandalf_wins+=1\n",
+    "        saruman_wins=0\n",
+    "    elif g<0 and gandalf_wins<3:\n",
+    "        gandalf_wins=0\n",
+    "        saruman_wins+=1\n",
+    "    else:\n",
+    "        gandalf_wins+=0\n",
+    "        saruman_wins+=0\n",
+    "\n",
+    "if gandalf_wins>=3:\n",
+    "    print('Gandalf wins')\n",
+    "elif saruman_wins>=3:\n",
+    "    print('Saruman wins')\n",
+    "else:\n",
+    "    print('Tie')\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -185,16 +264,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "39.0\n",
+      "30.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "average_gandalf=sum(gandalf_power)/len(gandalf_power)\n",
+    "print(average_gandalf)\n",
+    "average_saruman=sum(saruman_power)/len(saruman_power)\n",
+    "print(average_saruman)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 6. Find the standard deviation of the spell power of Gandalf and Saruman. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15.132745950421556\n",
+      "15.56438241627338\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "numgan=0\n",
+    "for p in gandalf_power:\n",
+    "    numgan+=(p-average_gandalf)**2\n",
+    "vgan=numgan/len(gandalf_power)\n",
+    "stdvgan=math.sqrt(vgan)\n",
+    "print(stdvgan)\n",
+    "numsar=0\n",
+    "for p in saruman_power:\n",
+    "    numsar+=(p-average_saruman)**2\n",
+    "vsar=numsar/len(saruman_power)\n",
+    "stdvsar=math.sqrt(vsar)\n",
+    "print(stdvsar)\n"
    ]
   },
   {
@@ -221,7 +344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
