--- a/1.-Python/3.-Bus/bus.ipynb
+++ b/1.-Python/3.-Bus/bus.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,10 +52,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "number_stops=len(stops)\n",
+    "print(number_stops)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,10 +78,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 13, 11, 10, 14, 10, 7, 5, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_passenger=[]\n",
+    "for j in stops:\n",
+    "    n_passenger.append(j[0]-j[1])\n",
+    "Total_passenger=[]\n",
+    "Total_passenger.append(n_passenger[0])\n",
+    "while len(Total_passenger)<=number_stops-1:\n",
+    "    Total_passenger.append(Total_passenger[len(Total_passenger)-1]+n_passenger[len(Total_passenger)])\n",
+    "print(Total_passenger)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,16 +109,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14\n"
+     ]
+    }
+   ],
+   "source": [
+    "maximum_oc=max(Total_passenger)\n",
+    "print(maximum_oc)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 4. Calculate the average occupation. And the standard deviation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.333333333333334\n",
+      "1.777777777777778\n"
+     ]
+    }
+   ],
+   "source": [
+    "average_oc=sum(Total_passenger)/len(Total_passenger)\n",
+    "print(average_oc)\n",
+    "import math \n",
+    "for n in Total_passenger:\n",
+    "    num=(n-average_oc)**2\n",
+    "div=len(Total_passenger)\n",
+    "stdev_oc=math.sqrt(num/div)\n",
+    "print(stdev_oc)"
    ]
   },
   {
@@ -117,7 +181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
