--- a/1.-Python/4.-Robin-Hood/robin-hood.ipynb
+++ b/1.-Python/4.-Robin-Hood/robin-hood.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,10 +55,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(4, 5), (-3, 2), (5, 7), (2, 2)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "unico_arrow=[]\n",
+    "arrow_in_arrow=[]\n",
+    "for j in points:\n",
+    "    if j not in unico_arrow:\n",
+    "        unico_arrow.append(j)\n",
+    "    else:\n",
+    "        if j not in arrow_in_arrow:\n",
+    "            arrow_in_arrow.append(j)\n",
+    "print(arrow_in_arrow)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -70,10 +88,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q1 tiene 10 flechas\n",
+      "Q2 tiene 6 flechas\n",
+      "Q3 tiene 2 flechas\n",
+      "Q4 tiene 2 flechas\n"
+     ]
+    }
+   ],
+   "source": [
+    "q1=[]\n",
+    "q2=[]\n",
+    "q3=[]\n",
+    "q4=[]\n",
+    "q5=[]\n",
+    "for k in points:\n",
+    "    if k[0]>0 and k[1]>0:\n",
+    "        q1.append(k)\n",
+    "    elif k[0]<0 and k[1]>0:\n",
+    "        q2.append(k)\n",
+    "    elif k[0]<0 and k[1]<0:\n",
+    "        q3.append(k)\n",
+    "    elif k[0]>0 and k[1]<0:\n",
+    "        q4.append(k)\n",
+    "    else:\n",
+    "        q5.append(k)\n",
+    "lq1=len(q1)\n",
+    "lq2=len(q2)\n",
+    "lq3=len(q3)\n",
+    "lq4=len(q4)\n",
+    "print(f'Q1 tiene {lq1} flechas')\n",
+    "print(f'Q2 tiene {lq2} flechas')\n",
+    "print(f'Q3 tiene {lq3} flechas')\n",
+    "print(f'Q4 tiene {lq4} flechas')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -88,10 +142,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Las flechas mas cercanas son [(0, 2), (0, -2)], con una distancia euclidiana de 2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "distance=[]\n",
+    "import math\n",
+    "for u in points:\n",
+    "    eclu=math.sqrt(u[0]**2+u[1]**2)\n",
+    "    distance.append(eclu)\n",
+    "minimo=min(distance)\n",
+    "minpoints=[]\n",
+    "for pos,item in enumerate(distance):\n",
+    "    if item==minimo:\n",
+    "        minpoints.append(points[pos])\n",
+    "print(f'Las flechas mas cercanas son {minpoints}, con una distancia euclidiana de {minimo}')\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,6 +173,31 @@
    "source": [
     "#### 4. If the archery target has a radius of 9, calculate the number of arrows that won't hit the target. \n",
     "**Hint**: Use the function created in step 3. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Número de flechas fuera de la diana 2, flechas [(9, 9), (-8, -9)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "out=[]\n",
+    "intarget=[]\n",
+    "for k in points:\n",
+    "    if k[0]>=9 or k[1]>=9 or k[0]<=-9 or k[1]<=-9:\n",
+    "        out.append(k)\n",
+    "    else:\n",
+    "        intarget.append(k)\n",
+    "lenout=len(out)\n",
+    "print(f'Número de flechas fuera de la diana {lenout}, flechas {out}')\n"
    ]
   },
   {
@@ -125,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
