--- a/1.-Python/6.-Rock–Paper–Scissors/rock-paper-scissors.ipynb
+++ b/1.-Python/6.-Rock–Paper–Scissors/rock-paper-scissors.ipynb
@@ -32,10 +32,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#importar random\n",
+    "import random\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -46,10 +49,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gestures=['rock','paper','scissors']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -61,10 +66,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cuantos números de rounds quieres jugar:3\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_rounds=(int(input(f'Cuantos números de rounds quieres jugar:')))\n",
+    "num_rounds=[]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -76,10 +92,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "rounds_to_win=n_rounds//2+1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -90,10 +108,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cpu_score=[]\n",
+    "player_score=[]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -105,10 +126,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def cpu_choi():\n",
+    "    import random\n",
+    "    cpu_choice=random.choice(gestures)\n",
+    "    return cpu_choice"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,10 +146,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Escoge entre rock, paper o scissors:rock\n"
+     ]
+    }
+   ],
+   "source": [
+    "player_choice=(input(f'Escoge entre {gestures[0]}, {gestures[1]} o {gestures[2]}:'))\n",
+    "while player_choice!=gestures[0] and player_choice!=gestures[1] and player_choice!=gestures[2]:\n",
+    "    player_choice=(input(f'Por favor escoge entre {gestures[0]}, {gestures[1]} o {gestures[2]}:'))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -135,10 +173,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def roundwin():\n",
+    "    cpu_choic=cpu_choi()\n",
+    "    num_rounds.append(1)\n",
+    "    print(f'Computer eligió {cpu_choic}')\n",
+    "    round2=0\n",
+    "    if cpu_choic==player_choice:\n",
+    "        round2=0\n",
+    "    elif cpu_choic==gestures[0] and player_choice==gestures[2]:\n",
+    "        round2=1\n",
+    "    elif cpu_choic==gestures[1] and player_choice==gestures[0]:\n",
+    "        round2=1\n",
+    "    elif cpu_choic==gestures[2] and player_choice==gestures[1]:\n",
+    "        round2=1 \n",
+    "    else:\n",
+    "        round2=2\n",
+    "    return round2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -150,10 +205,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def win():\n",
+    "    roundw=roundwin()\n",
+    "    print(f'Player eligió {player_choice}')\n",
+    "    if roundw==2:\n",
+    "        print('Player win')\n",
+    "        player_score.append(1)\n",
+    "    elif roundw==1:\n",
+    "        print('CPU win')\n",
+    "        cpu_score.append(1)\n",
+    "    else:\n",
+    "        print('Tie')\n",
+    "    return"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -168,10 +236,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Escoge entre rock, paper o scissors:rock\n",
+      "Computer eligió paper\n",
+      "Player eligió rock\n",
+      "CPU win\n",
+      "Player score:0\n",
+      "CPU score:1\n",
+      "Escoge entre rock, paper o scissors:rock\n",
+      "Computer eligió paper\n",
+      "Player eligió rock\n",
+      "CPU win\n",
+      "Player score:0\n",
+      "CPU score:2\n"
+     ]
+    }
+   ],
+   "source": [
+    "while not any([len(cpu_score)>=rounds_to_win, len(player_score)>=rounds_to_win,len(num_rounds)>=n_rounds ]):\n",
+    "    player_choice=(input(f'Escoge entre {gestures[0]}, {gestures[1]} o {gestures[2]}:'))\n",
+    "    while player_choice!=gestures[0] and player_choice!=gestures[1] and player_choice!=gestures[2]:\n",
+    "        player_choice=(input(f'Por favor escoge entre {gestures[0]}, {gestures[1]} o {gestures[2]}:'))\n",
+    "    win()\n",
+    "    print(f'Player score:{len(player_score)}')\n",
+    "    print(f'CPU score:{len(cpu_score)}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -183,10 +278,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El ganador es CPU\n"
+     ]
+    }
+   ],
+   "source": [
+    "if player_score>cpu_score:\n",
+    "    print('El ganador es Player')\n",
+    "elif player_score<cpu_score:\n",
+    "    print('El ganador es CPU')\n",
+    "else:\n",
+    "    print('Empate entre CPU y Player')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -204,10 +314,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gestures2=['rock','paper','scissors','spock','lizard']\n",
+    "\n",
+    "\n",
+    "\n",
+    "num_rounds2=[]\n",
+    "cpu_score2=[]\n",
+    "player_score2=[]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cuantos números de rounds quieres jugar:5\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_rounds2=(int(input(f'Cuantos números de rounds quieres jugar:')))\n",
+    "while n_rounds2%2==0:\n",
+    "    n_rounds2=(int(input(f'Escoge un numero impar:')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rounds_to_win2=n_rounds2//2+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cpu_choi2():\n",
+    "    import random\n",
+    "    cpu_choice2=random.choice(gestures2)\n",
+    "    return cpu_choice2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def roundwin2():\n",
+    "    cpu_choic2=cpu_choi2()\n",
+    "    num_rounds2.append(1)\n",
+    "    print(f'Computer eligió {cpu_choic2}')\n",
+    "    round3=0\n",
+    "    if cpu_choic2==player_choice2:\n",
+    "        round3=0\n",
+    "    elif cpu_choic2==gestures2[0] and player_choice2==gestures2[2] or player_choice2==gestures2[4]:\n",
+    "        round3=1\n",
+    "    elif cpu_choic2==gestures2[1] and player_choice2==gestures2[0] or player_choice2==gestures2[3]:\n",
+    "        round3=1\n",
+    "    elif cpu_choic2==gestures2[2] and player_choice2==gestures2[1] or player_choice2==gestures2[4]:\n",
+    "        round3=1 \n",
+    "    elif cpu_choic2==gestures2[3] and player_choice2==gestures2[0] or player_choice2==gestures2[2]:\n",
+    "        round3=1 \n",
+    "    elif cpu_choic2==gestures2[4] and player_choice2==gestures2[1] or player_choice2==gestures2[3]:\n",
+    "        round3=1 \n",
+    "    else:\n",
+    "        round3=2\n",
+    "    return round3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def win2():\n",
+    "    roundw2=roundwin2()\n",
+    "    print(f'Player eligió {player_choice2}')\n",
+    "    if roundw2==2:\n",
+    "        print('Player win')\n",
+    "        player_score2.append(1)\n",
+    "    elif roundw2==1:\n",
+    "        print('CPU win')\n",
+    "        cpu_score2.append(1)\n",
+    "    else :\n",
+    "        print('Tie')\n",
+    "    return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Escoge entre rock, paper, scissors, spock o lizard:rock\n",
+      "Computer eligió spock\n",
+      "Player eligió rock\n",
+      "CPU win\n",
+      "Player score:0\n",
+      "CPU score:1\n",
+      "Escoge entre rock, paper, scissors, spock o lizard:rock\n",
+      "Computer eligió spock\n",
+      "Player eligió rock\n",
+      "CPU win\n",
+      "Player score:0\n",
+      "CPU score:2\n",
+      "Escoge entre rock, paper, scissors, spock o lizard:rock\n",
+      "Computer eligió spock\n",
+      "Player eligió rock\n",
+      "CPU win\n",
+      "Player score:0\n",
+      "CPU score:3\n"
+     ]
+    }
+   ],
+   "source": [
+    "while not any([len(cpu_score2)>=rounds_to_win2, len(player_score2)>=rounds_to_win2,len(num_rounds2)>=n_rounds2 ]):\n",
+    "    player_choice2=(input(f'Escoge entre {gestures2[0]}, {gestures2[1]}, {gestures2[2]}, {gestures2[3]} o {gestures2[4]}:'))\n",
+    "    while player_choice2!=gestures2[0] and player_choice2!=gestures2[1] and player_choice2!=gestures2[2]and player_choice2!=gestures2[3]and player_choice2!=gestures2[4]:\n",
+    "        player_choice2=(input(f'Por favor escoge entre {gestures2[0]}, {gestures2[1]} , {gestures2[2]}, {gestures2[3]}, {gestures2[4]}:'))\n",
+    "    win2()\n",
+    "    print(f'Player score:{len(player_score2)}')\n",
+    "    print(f'CPU score:{len(cpu_score2)}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El ganador es CPU\n"
+     ]
+    }
+   ],
+   "source": [
+    "if player_score2>cpu_score2:\n",
+    "    print('El ganador es Player')\n",
+    "elif player_score2<cpu_score2:\n",
+    "    print('El ganador es CPU')\n",
+    "else:\n",
+    "    print('Empate entre CPU y Player')"
+   ]
   }
  ],
  "metadata": {
@@ -226,7 +494,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
