--- a/1.-Python/6.-Rock–Paper–Scissors/rock-paper-scissors.ipynb
+++ b/1.-Python/6.-Rock–Paper–Scissors/rock-paper-scissors.ipynb
@@ -36,8 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#importar random\n",
-    "import random\n"
+    "import random"
    ]
   },
   {
