--- a/1.-Python/1.-Snail-and-Well/snail-and-well.ipynb
+++ b/1.-Python/1.-Snail-and-Well/snail-and-well.ipynb
@@ -152,15 +152,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Maximum displacement:57\n",
-      "Minimum displacement:1\n"
+      "Maximum displacement fue el día 4 con 57cm\n",
+      "Minimum displacement fue el día 2 con 1cm\n"
      ]
     }
    ],
@@ -178,8 +178,22 @@
     "        advancemaxmin.append(x-nightly_distance)\n",
     "maximo=max(advancemaxmin)\n",
     "minimo=min(advancemaxmin)\n",
-    "print(f'Maximum displacement:{maximo}')\n",
-    "print(f'Minimum displacement:{minimo}')"
+    "minday=[]\n",
+    "for pos,item in enumerate(advancemaxmin):\n",
+    "    if item==minimo:\n",
+    "        minday.append(pos+1)\n",
+    "minday2=0\n",
+    "for x in minday:\n",
+    "    minday2=x\n",
+    "maxday=[]\n",
+    "for pos,item in enumerate(advancemaxmin):\n",
+    "    if item==maximo:\n",
+    "        maxday.append(pos+1)\n",
+    "maxday2=0\n",
+    "for x in maxday:\n",
+    "    maxday2=x\n",
+    "print(f'Maximum displacement fue el día {maxday2} con {maximo}cm')\n",
+    "print(f'Minimum displacement fue el día {minday2} con {minimo}cm')"
    ]
   },
   {
