--- a/1.-Python/4.-Robin-Hood/robin-hood.ipynb
+++ b/1.-Python/4.-Robin-Hood/robin-hood.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -177,14 +177,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Número de flechas fuera de la diana 2, flechas [(9, 9), (-8, -9)]\n"
+      "Número de flechas fuera de la diana: two, flechas [(9, 9), (-8, -9)]\n"
      ]
     }
    ],
@@ -197,15 +197,11 @@
     "    else:\n",
     "        intarget.append(k)\n",
     "lenout=len(out)\n",
-    "print(f'Número de flechas fuera de la diana {lenout}, flechas {out}')\n"
+    "import inflect\n",
+    "p = inflect.engine()\n",
+    "number=p.number_to_words(lenout)\n",
+    "print(f'Número de flechas fuera de la diana: {number}, flechas {out}')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
